--- a/estilo/style.css
+++ b/estilo/style.css
@@ -54,7 +54,7 @@ header > p{
     max-width: 600px;
     font-size: 1.2em;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     padding-left: 10px;
     padding-right: 10px;
     text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.438);
